Per suggestion from @purplesky2016, make first entry link to main Docassemble documentation

--- a/docassemble/ALRecipes/data/questions/examples.yml
+++ b/docassemble/ALRecipes/data/questions/examples.yml
@@ -1,3 +1,5 @@
+- "Hello, World": 
+  - example-hello-world
 - Suffolk LIT Lab Assembly Line:
   - ALIndividual Names:
     - example-al-names-person
