Add playground example for language fields

--- a/docassemble/ALRecipes/data/questions/examples.yml
+++ b/docassemble/ALRecipes/data/questions/examples.yml
@@ -10,6 +10,10 @@
   - ALIndividual Address:
     - example-al-address
     - example-al-address-show-country
+  - ALIndividual Language:
+    - example-al-language
+  - Standard language:
+    - example-standard-language
     #- Standard Address:
     #  - example-standard-address-fields
     #- ALIndividual Gender:
